# build-your-own-lisp

./: .gitignore  CMakeLists.txt  Makefile  conditionals.c  error_handling.c  evaluation.c  flake.nix  funtions.c  parsing.c  prompt.c  q_expressions.c  s_expressions.c  variables.c
